# gpu-rain

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh  create-resources.sh  run.sh
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  glx.h
libs/glad/src/: gl.c
media/: main-depth.exr  top-down-depth.exr
shaders/: rain.comp  rain.frag  rain.vert  simple.frag  simple.vert  texture.frag  texture.vert
src/: application.cpp  application.hpp  config-file.cpp  depth-image.cpp  depth-image.hpp  image-renderer.cpp  image-renderer.hpp  main.cpp  programs-library.cpp  programs-library.hpp  rain-simulation.cpp  rain-simulation.hpp  render-area-layout-constructor.cpp  render-area-layout-constructor.hpp  render-area-layout.hpp  x-root-window.cpp  x-root-window.hpp
src/gl/: acbo.cpp  acbo.hpp  ebo.cpp  ebo.hpp  framebuffer.cpp  framebuffer.hpp  ms-texture.cpp  ms-texture.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  ssbo.cpp  ssbo.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
